<resources>
    <string name="app_name" translatable="false">Submission 1 Intermediate</string>
    <string name="log_in">Log In</string>
    <string name="sign_out">Sign Out</string>

    <string name="success_register">You have successfully created an account!</string>
    <string name="fail_register">Email is already taken!</string>
    <string name="timeout">Connection Error!. please try again later</string>
    <string name="error_message" translatable="false">Error message:</string>
    <string name="fail_data">Error!, No data available</string>

    <string name="welcome">Welcome</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_signout">You sure want to Sign Out?</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password2">Confirm Password</string>

    <string name="enter_name">Enter name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Password doesn\'t match</string>
    <string name="length_password">Password at lest 6 character</string>
    <string name="invalid_email">Must valid email</string>

    <string name="maps">Maps</string>

    <string name="retry">Retry</string>
    <string name="success">Success</string>
    <string name="success_login">You are logged in!</string>
    <string name="cont" translatable="false">Continue</string>

    <string name="fail_login">Invalid password</string>
    <string name="fail">Fail</string>

    <string name="mode" translatable="false">Mode</string>

    <string name="back">Back</string>

    <string name="new_story">Add new story</string>

    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload" translatable="false">Upload</string>
    <string name="error_camera">Error!, your camera doesn\'t working</string>
    <string name="fail_capture">Fail! to take a picture</string>
    <string name="no_permission">Not getting permissions.</string>
    <string name="empty_picture">Please enter your image first!</string>
    <string name="empty_desc">Description cannot be empty!</string>
    <string name="success_capture">Success!</string>
    <string name="success_upload">Success upload your story</string>
    <string name="fail_internet">Fail!, Check your internet connection</string>
    <string name="sign_up">Sign Up</string>


    <string name="photo" translatable="false">Photo</string>
    <string name="select_language">Select language</string>
    <string name="message">Message : </string>
    <string name="post_as" translatable="false">"Post As : "</string>
    <string name="location_name_unknown">Location Unknown</string>
    <string name="no_location">No Location</string>

</resources>