<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.auth.RegisterActivity">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="8dp"
                android:alpha="0"
                android:src="@drawable/register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:alpha="1" />

            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:alpha="0"
                android:text="@string/sign_up"
                android:textColor="@color/gray"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/ed_register_name"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"
                tools:alpha="1" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:alpha="0"
                android:text="@string/name"
                android:textColor="@color/gray"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/tv_signup"
                app:layout_constraintTop_toBottomOf="@+id/tv_signup"
                tools:alpha="1" />

            <com.example.submission1intermediate.ui.customview.CustomViewEditText
                android:id="@+id/ed_register_name"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:alpha="0"
                android:background="@drawable/custom_edittext"
                android:elevation="5dp"
                android:hint="@string/name"
                android:inputType="text"
                android:paddingStart="13dp"
                android:paddingEnd="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name"
                tools:alpha="1"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:alpha="0"
                android:text="@string/email"
                android:textColor="@color/gray"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/tv_name"
                app:layout_constraintTop_toBottomOf="@+id/ed_register_name"
                tools:alpha="1" />

            <com.example.submission1intermediate.ui.customview.CustomViewEditText
                android:id="@+id/ed_register_email"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:alpha="0"
                android:background="@drawable/custom_edittext"
                android:elevation="5dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="13dp"
                android:paddingEnd="13dp"
                app:layout_constraintEnd_toEndOf="@+id/ed_register_name"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/ed_register_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_email"
                tools:alpha="1"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:alpha="0"
                android:text="@string/password"
                android:textColor="@color/gray"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/tv_email"
                app:layout_constraintTop_toBottomOf="@+id/ed_register_email"
                tools:alpha="1" />

            <com.example.submission1intermediate.ui.customview.CvEditTextPassword
                android:id="@+id/ed_register_password1"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:alpha="0"
                android:background="@drawable/custom_edittext"
                android:elevation="5dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="13dp"
                android:paddingEnd="13dp"
                app:layout_constraintEnd_toEndOf="@+id/ed_register_email"
                app:layout_constraintStart_toStartOf="@+id/ed_register_email"
                app:layout_constraintTop_toBottomOf="@+id/tv_password"
                tools:alpha="1"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/tv_confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:alpha="0"
                android:text="@string/password2"
                android:textColor="@color/gray"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/tv_password"
                app:layout_constraintTop_toBottomOf="@+id/ed_register_password1"
                tools:alpha="1" />

            <com.example.submission1intermediate.ui.customview.CvEditTextPassword
                android:id="@+id/ed_register_password2"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:alpha="0"
                android:background="@drawable/custom_edittext"
                android:elevation="5dp"
                android:hint="@string/password2"
                android:inputType="textPassword"
                android:paddingStart="13dp"
                android:paddingEnd="13dp"
                app:layout_constraintEnd_toEndOf="@+id/ed_register_password1"
                app:layout_constraintStart_toStartOf="@+id/ed_register_password1"
                app:layout_constraintTop_toBottomOf="@+id/tv_confirm_password"
                tools:alpha="1"
                tools:ignore="Autofill" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_regist"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:alpha="0"
                android:background="@drawable/custom_button"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/ed_register_password2"
                app:layout_constraintStart_toStartOf="@+id/ed_register_password2"
                app:layout_constraintTop_toBottomOf="@+id/ed_register_password2"
                tools:alpha="1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_back"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:alpha="0"
                android:background="@drawable/custom_button_register"
                android:text="@string/back"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/btn_regist"
                app:layout_constraintStart_toStartOf="@+id/btn_regist"
                app:layout_constraintTop_toBottomOf="@+id/btn_regist"
                tools:alpha="1" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

    <ProgressBar
        android:id="@+id/pb_regist"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="260dp"
        android:elevation="1dp"
        android:theme="@style/progressBarStyle" />
</RelativeLayout>
