<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addstory.AddStoryActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/previewImage"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_margin="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_image_24" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_gallery"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/custom_button"
            android:text="@string/gallery"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/et_description"
            app:layout_constraintEnd_toEndOf="@+id/previewImage"
            app:layout_constraintTop_toBottomOf="@+id/previewImage" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_camerax"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_button"
            android:text="@string/camera"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/et_description"
            app:layout_constraintEnd_toStartOf="@+id/btn_gallery"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="@+id/previewImage"
            app:layout_constraintTop_toBottomOf="@+id/previewImage" />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/custom_edittext"
            android:elevation="5dp"
            android:gravity="top"
            android:hint="Enter description"
            android:inputType="textMultiLine"
            android:lines="8"
            android:padding="12dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_upload"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/previewImage" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_upload"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/upload"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:background="@drawable/custom_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ProgressBar
        android:id="@+id/pb_addstory"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:theme="@style/progressBarStyle"
        android:layout_marginTop="260dp"
        android:layout_marginStart="130dp"/>
</RelativeLayout>
